--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<div class="col-lg-6">
 						<img
 							class="title-image"
-							src="/iphone6.png"
+							src="	https://shivammishra2004.github.io/iphone6.png"
 							alt="iphone-mockup"
 						/>
 					</div>
@@ -150,7 +150,7 @@
 						</h2>
 						<img
 							class="testimonial-image"
-							src="/lady-img.jpg"
+							src="https://shivammishra2004.github.io/lady-img.jpg"
 							alt="lady-profile"
 						/>
 						<em>Beverly, Illinois</em>
@@ -178,15 +178,27 @@
 		<!-- Press -->
 
 		<section class="press colored-section">
-			<img class="press-logo" src="
-				/techcrunch.png" alt="tc-logo" />
-			<img class="press-logo" src="/tnw.png" alt="tnw-logo" />
 			<img
 				class="press-logo"
-				src="/bizinsider.png"
+				src="
+					https://shivammishra2004.github.io/techcrunch.png"
+				alt="tc-logo"
+			/>
+			<img
+				class="press-logo"
+				src="https://shivammishra2004.github.io/tnw.png"
+				alt="tnw-logo"
+			/>
+			<img
+				class="press-logo"
+				src="https://shivammishra2004.github.io/bizinsider.png"
 				alt="biz-insider-logo"
 			/>
-			<img class="press-logo" src="/mashable.png" alt="mashable-logo" />
+			<img
+				class="press-logo"
+				src="https://shivammishra2004.github.io/mashable.png"
+				alt="mashable-logo"
+			/>
 		</section>
 
 		<!-- Pricing -->
